# void-a-nomicon

./: .gitignore  Cargo.toml
.github/workflows/: release.yaml
assets/: item.config  ui.config  ui_icons.config
assets/item_data/: test.itm
assets/items/: core.vi  grass.vi  meta.vi  test.vi
assets/mods/food/: food.vp  items.vi  recipies.vr
assets/mods/resources/: items.vi  recipies.rv  recipies.vr
assets/recipies/: core.vr  grass.vr  meta.vr
examples/: make_items_util.rs
src/: error.rs  item.rs  lib.rs  main.rs  one_offs.rs  prelude.rs  recipies.rs  serde.rs  sound.rs  story.rs  ui.rs
src/item/: config.rs  event.rs  items.rs  physics.rs  pickup.rs  tags.rs
src/ui/: tooltip.rs  ui_config.rs
