[package]
name = "void-a-nomicon"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = {version = "0.8", features = ["serialize"]}
anyhow = "1.0.62"
thiserror = "1.0.32"
toml = "0.5.9"
serde = "1"
ron = "0.8.0"
bevy_editor_pls = {git = "https://github.com/jakobhellermann/bevy_editor_pls"}
rand = "0.8.5"